--- a/index.html
+++ b/index.html
@@ -1,24 +1,224 @@
-<!-- 
-HTML Template for Missions, delete and replace with mission HTML
--->
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
-  <title>Gnius Club</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Playbook - Preescolar Sesión 19</title>
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-
 <body>
-  <h1>
-    Playbook HTML Placeholder Template
-  </h1>
-  <p>
-    Replace with actual playbook code.
-  </p>
-  <script src="script.js"></script>
+<header>
+<h1><span class="book-icon">📋</span> <strong>Playbook Sesión 19 Kínder</strong></h1>
+<div class="header-widgets">
+<div class="timer-container">
+<span id="timer">⏱️ 00:00</span>
+<button id="startStop">Start</button>
+<button id="reset">Reset</button>
+</div>
+<div class="theme-toggle">
+<i class="fas fa-sun"></i>
+<label class="switch">
+<input type="checkbox" id="theme-toggle-input">
+<span class="slider round"></span>
+</label>
+<i class="fas fa-moon"></i>
+</div>
+</div>
+</header>
+<div class="main-container">
+<aside class="activity-list">
+<h2>Actividades</h2>
+<ul>
+<li><a href="#activity-0">📝</a></li>
+<li><a href="#activity-1">1</a></li>
+<li><a href="#activity-2">2</a></li>
+<li><a href="#activity-3">3</a></li>
+<li><a href="#activity-4">4</a></li>
+</ul>
+<div class="sidebar-info">
+<p>💡 Cada actividad está diseñada para ser lúdica y captar la atención de los más pequeños.</p>
+<p>⏱️ Los tiempos son una guía. Sé flexible y adáptate al ritmo del grupo.</p>
+</div>
+</aside>
+<main class="content">
+<div class="progress-bar">
+<div class="progress"></div>
+</div>
+<button id="toggle-dialogues">Mostrar todos los diálogos</button>
+<div class="activity-card" id="activity-0">
+<h2><span class="book-icon">📝</span> De un Vistazo: Misión: El Desafío del Laboratorio de Datos</h2>
+<p class="overview-subtitle">Resumen rápido de objetivos, materiales y preparación para esta aventura de aprendizaje.</p>
+<div class="overview-table-container">
+<table>
+<thead>
+<tr>
+<th style="width: 50%;">Objetivos, Tácticas y Entregable</th>
+<th style="width: 50%;">Materiales Específicos y Preparación Previa</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+<strong>Objetivos de Aprendizaje:</strong>
+<ul>
+<li>Profundizar en el concepto de sesgo y datos de calidad.</li>
+<li>Experimentar con escenarios de entrenamiento más complejos.</li>
+<li>Fomentar el juego libre y la exploración de conceptos de IA.</li>
+</ul>
+<strong>Secuencia Didáctica de la Misión:</strong>
+<ul>
+<li>⚡ Actividad 1: Bienvenida y Calentamiento Cerebral</li>
+<li>⚡ Actividad 2: Planteamiento del Reto y Cuento</li>
+<li>⚡ Actividad 3: ¡Manos a la Obra! (Actividad Principal)</li>
+<li>⚡ Actividad 4: Puesta en Común y Cierre de la Misión</li>
+</ul>
+<strong>Entregable Clave:</strong>
+<ul>
+<li>Clasificación exitosa de tarjetas de datos para el Kinderbot y una idea clara de por qué a veces se confunde.</li>
+</ul>
+</td>
+<td>
+<strong>Materiales Específicos:</strong>
+<ul>
+<li>Kinderbot.</li>
+<li>Gran variedad de tarjetas de datos (animales de granja, animales de la selva, vehículos, etc.).</li>
+</ul>
+<strong>Preparación Previa para ESTA Sesión:</strong>
+<ol>
+<li><strong>Revisión de Materiales:</strong> Asegurar que todos los materiales estén completos, limpios y listos para ser repartidos.</li>
+<li><strong>Preparación del Espacio:</strong> Organizar el aula para facilitar la actividad (círculo en el suelo, mesas de trabajo, espacio para moverse).</li>
+<li><strong>Familiarización:</strong> Leer el playbook completo para entender el flujo narrativo, los diálogos y las transiciones. Tener clara la historia o el reto que se presentará.</li>
+</ol>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+<div class="activity-card" id="activity-1">
+<h2>⚡ Actividad 1: ¡Hola, Pequeños Científicos del Futuro! ⏰ 5 min</h2>
+<p>Es hora de despertar nuestras mentes curiosas para una misión super emocionante.</p>
+<div class="steps">
+<div class="step-card">
+<div class="step-content">
+<h3>Paso 1: ¡Activando Neuronas! ⏰ 2 min (Proyectar Diapositiva 1)</h3>
+<p>Recibir a los niños con entusiasmo y realizar una pequeña rutina de calentamiento físico o vocal para activar la energía y la concentración. Invitar a los niños a sentarse cómodamente en el área designada para el inicio de la clase, preferiblemente en círculo, para fomentar la interacción.</p>
+</div>
+<div class="collapsible">
+<button type="button" class="collapsible-button">Diálogo Sugerido</button>
+<div class="collapsible-content">
+<p class="dialogue assistant">"¡Hola, hola, equipo de exploradores de la IA! ¡Qué alegría verlos listos para otra aventura increíble! ¡Miren qué día tan soleado para aprender! Antes de empezar nuestra misión ultra-secreta de hoy, ¿qué tal si movemos un poco el esqueleto para que nuestras ideas fluyan como un río de datos? ¡Vamos a estirarnos como un Kinderbot que acaba de despertar! ¡Arriba esos brazos como antenas de robot, abajo como si buscáramos un dato perdido! ¡A mover la cabeza de un lado a otro como si estuviéramos procesando información! ¡Eso es! ¡A sus marcas, listos, a investigar y a movernos!"</p>
+</div>
+</div>
+</div>
+<div class="step-card">
+<div class="step-content">
+<h3>Paso 2: Preparando el Laboratorio Mental ⏰ 3 min (Proyectar Diapositiva 2)</h3>
+<p>Introducir el concepto de "laboratorio" como un lugar para experimentar y aprender. Preguntar a los niños qué creen que hace un científico y prepararlos mentalmente para la "misión" del día, fomentando la curiosidad y la participación activa.</p>
+</div>
+<div class="collapsible">
+<button type="button" class="collapsible-button">Diálogo Sugerido</button>
+<div class="collapsible-content">
+<p class="dialogue assistant">"¡Excelente! Ahora que nuestros cuerpos están listos, ¡vamos a preparar nuestras mentes! Hoy, nuestra sala se convertirá en un ¡Laboratorio Secreto de Datos! ¿Alguien sabe qué hace un científico en un laboratorio? ¡Exacto! Investigan, descubren cosas nuevas, hacen experimentos y resuelven misterios. ¡Y hoy, ustedes serán mis pequeños científicos más brillantes! ¿Están listos para ponerse sus 'gafas de curiosidad' y su 'bata de exploradores'? ¡Perfecto! Porque nuestra misión de hoy es ¡súper importante y divertida! ¡Prepárense para pensar, clasificar y descubrir!"</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="activity-card" id="activity-2">
+<h2>⚡ Actividad 2: Misión Secreta: ¡Entrenando a Kinderbot! ⏰ 5 min</h2>
+<p>Descubramos juntos el reto de hoy y cómo podemos ayudar a nuestro amigo Kinderbot.</p>
+<div class="steps">
+<div class="step-card">
+<div class="step-content">
+<h3>Paso 1: El Misterio de los Datos ⏰ 3 min (Proyectar Diapositiva 3)</h3>
+<p>Presentar el Kinderbot de forma emocionante, explicando brevemente que es un "robot que aprende" y que necesita nuestra ayuda. Plantear el reto de la sesión, utilizando el diálogo como un 'director de investigación' que necesita la ayuda de su equipo.</p>
+</div>
+<div class="collapsible">
+<button type="button" class="collapsible-button">Diálogo Sugerido</button>
+<div class="collapsible-content">
+<p class="dialogue assistant">"¡Atención, equipo de científicos! ¡Hoy, nuestro laboratorio está abierto para un ¡RETO SÚPER AVANZADO! Miren, aquí está nuestro amigo Kinderbot. Él es un robot muy inteligente, ¡pero a veces necesita nuestra ayuda para aprender cosas nuevas! Imaginen que Kinderbot es como un bebé que está aprendiendo sobre el mundo. ¡Y nosotros somos sus maestros especiales! Hoy, Kinderbot quiere aprender algo muy específico. ¿Creen que podemos enseñarle a Kinderbot la diferencia entre un 'animal de granja' y un 'animal de la selva'? ¡Será una misión que nos hará pensar como verdaderos genios de los datos! ¿Están listos para este desafío? ¡Pues manos a la obra, que el Kinderbot nos espera!"</p>
+</div>
+</div>
+</div>
+<div class="step-card">
+<div class="step-content">
+<h3>Paso 2: ¿Granja o Selva? ¡El Desafío Visual! ⏰ 2 min (Proyectar Diapositiva 4)</h3>
+<p>Mostrar algunas imágenes o tarjetas de animales de granja y de selva, preguntando a los niños dónde creen que viven. Esto sirve como un breve pre-conocimiento y activa su observación para la clasificación que viene. Explicar que Kinderbot no sabe esto aún, y por eso necesita su ayuda.</p>
+</div>
+<div class="collapsible">
+<button type="button" class="collapsible-button">Diálogo Sugerido</button>
+<div class="collapsible-content">
+<p class="dialogue assistant">"¡Vamos a ver si ustedes son tan buenos como creo! Miren estas imágenes de animales (mostrar una de granja y una de selva). ¿Dónde vive este animal? (ej. una vaca) ¡En la granja! ¿Y este? (ej. un león) ¡En la selva! ¡Muy bien! Ustedes ya saben la diferencia, ¡pero Kinderbot no! Él necesita que le mostremos muchos, muchos ejemplos para que su 'cerebro de robot' entienda. Para que Kinderbot aprenda, ¡necesitamos ser muy organizados con nuestros datos! ¿Están listos para clasificar y enseñar?"</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="activity-card" id="activity-3">
+<h2>⚡ Actividad 3: ¡Manos a la Obra! Clasificando para Kinderbot ⏰ 30 min</h2>
+<p>Es momento de poner nuestras manos y cerebros a trabajar para organizar la información de Kinderbot.</p>
+<div class="steps">
+<div class="step-card">
+<div class="step-content">
+<h3>Paso 1: Preparando los Datos (Organización) ⏰ 10 min (Proyectar Diapositiva 5)</h3>
+<p>Explicar la tarea de clasificación de las tarjetas. Disponer el espacio para que los niños puedan clasificar en dos montones: 'animales de granja' y 'animales de la selva'. Guiar a los niños en este proceso grupal, fomentando la discusión y el razonamiento sobre dónde debe ir cada animal. Asegurarse de que todos participen activamente en la manipulación y clasificación de las tarjetas. Si hay tarjetas con vehículos, recordarles que "no son animales".</p>
+</div>
+<div class="collapsible">
+<button type="button" class="collapsible-button">Diálogo Sugerido</button>
+<div class="collapsible-content">
+<p class="dialogue assistant">"¡Excelente, mini-científicos! ¡Nuestra primera tarea es crucial para Kinderbot! Miren todas estas tarjetas. ¡Son muchísimos animales! Necesitamos separarlos en dos grupos muy importantes para él: los que viven en la granja y los que viven en la selva. ¡Imaginen que tienen dos grandes canastas invisibles: una para la granja y otra para la selva! Vamos a tomar una tarjeta, mirarla muy bien, y pensar: '¿Este animal vive en la granja o en la selva?' ¡Y lo ponemos en su montón correcto! Si vemos un carro o un camión, ¿dónde va? ¡A ningún lado! ¡No es un animal! ¡Vamos a clasificarlos con mucho cuidado, como si estuviéramos guardando tesoros en sus cajas correctas! ¡Si alguien no está seguro, puede preguntar a un compañero o a mí! ¡Recuerden, somos un equipo de investigación!"</p>
+</div>
+</div>
+</div>
+<div class="step-card">
+<div class="step-content">
+<h3>Paso 2: Entrenando al Kinderbot y Poniéndolo a Prueba ⏰ 20 min (Proyectar Diapositiva 6)</h3>
+<p>Una vez clasificadas todas las tarjetas y revisados los montones, 'entrenar' al Kinderbot. Primero, mostrarle todas las tarjetas de la categoría 'granja' una por una, verbalizando "Esto es un animal de granja". Luego, repetir el proceso con la categoría 'selva'. Finalmente, ponerlo a prueba con tarjetas al azar de ambos grupos, observando sus reacciones (movimientos, luces, sonidos si los tiene) e invitando a los niños a predecir y explicar qué creen que dirá Kinderbot. Si Kinderbot se equivoca, discutir por qué pudo haber ocurrido.</p>
+</div>
+<div class="collapsible">
+<button type="button" class="collapsible-button">Diálogo Sugerido</button>
+<div class="collapsible-content">
+<p class="dialogue assistant">"¡Lo están haciendo increíble! ¡Ahora viene la parte más emocionante, el ¡ENTRENAMIENTO de Kinderbot! ¡Imaginen que somos sus profesores más pacientes! Primero, le mostraremos todos los animales de la granja, ¡uno por uno! Mientras se los mostramos, diremos juntos: '¡Esto es un animal de granja!' ¡Concéntrense, Kinderbot está aprendiendo de ustedes! Muy bien, ya le enseñamos todos los de la granja. ¡Ahora, haremos lo mismo con los animales de la selva! '¡Esto es un animal de la selva!' ¡Muy bien, pequeños maestros! Y ahora... ¡Es el momento de la verdad! ¡La prueba! Vamos a mostrarle una tarjeta al azar y veremos si Kinderbot ha aprendido bien. ¿Qué creen que dirá? ¿Un animal de granja o de la selva? ¡Si Kinderbot se confunde, no se preocupen! ¡Eso nos dará pistas para entender cómo piensa y cómo podemos enseñarle mejor! ¡Recuerden, somos directores de investigación y cada 'error' o 'confusión' de Kinderbot es una oportunidad para aprender algo nuevo sobre cómo aprenden los robots!"</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="activity-card" id="activity-4">
+<h2>⚡ Actividad 4: ¡Misión Cumplida! Reflexionando sobre los Datos ⏰ 5 min</h2>
+<p>Compartamos lo que aprendimos y celebremos nuestra increíble aventura en el laboratorio.</p>
+<div class="steps">
+<div class="step-card">
+<div class="step-content">
+<h3>Paso 1: Compartiendo Descubrimientos ⏰ 2 min (Proyectar Diapositiva 7)</h3>
+<p>Invitar a los niños a compartir sus observaciones sobre cómo Kinderbot reaccionó durante la prueba. Preguntarles si hubo algún animal que lo confundió y por qué creen que pasó eso. Fomentar que expresen sus propias hipótesis y descubrimientos.</p>
+</div>
+<div class="collapsible">
+<button type="button" class="collapsible-button">Diálogo Sugerido</button>
+<div class="collapsible-content">
+<p class="dialogue assistant">"¡Increíble trabajo, equipo! ¡Han sido unos directores de investigación fenomenales! Ahora, quiero escuchar sus voces de científicos. ¿Quién quiere compartir qué fue lo que más le sorprendió de cómo aprendió Kinderbot? ¿Hubo alguna tarjeta que lo confundió? ¿Un animal que Kinderbot no supo si era de granja o de selva? ¿Por qué creen que pasó eso? ¡Sus ideas son muy valiosas y nos ayudan a entender el mundo de la IA! ¡Cada respuesta es un nuevo descubrimiento!"</p>
+</div>
+</div>
+</div>
+<div class="step-card">
+<div class="step-content">
+<h3>Paso 2: El Gran Descubrimiento del Sesgo y Despedida ⏰ 3 min (Proyectar Diapositiva 8)</h3>
+<p>Guiar una pequeña reflexión sobre el 'sesgo' de manera sencilla, utilizando la pregunta del cierre de la secuencia de entrada para introducir la idea de que los datos que le damos a la IA son cruciales. Felicitar al grupo por su esfuerzo y aprendizaje, reforzando la idea de que son "entrenadores de robots" y "científicos de datos".</p>
+</div>
+<div class="collapsible">
+<button type="button" class="collapsible-button">Diálogo Sugerido</button>
+<div class="collapsible-content">
+<p class="dialogue assistant">"¡Y aquí viene la pregunta más curiosa de todas, mis pequeños genios y futuros inventores! Si en los animales de la selva solo pusiéramos animales con rayas, como cebras y tigres, ¿creen que Kinderbot reconocería a un mono la próxima vez? ¡Hmm, eso es algo para pensar! ¡Significa que los datos, es decir, todas las tarjetas que le damos a Kinderbot, son SÚPER importantes para que aprenda bien! Si le enseñamos solo un tipo de animales, ¡quizás no reconozca a los demás! ¡Así que debemos darle muchos tipos de ejemplos! ¡Felicidades, mis pequeños y grandes cerebros de la IA! ¡Misión cumplida con honores! ¡Son los mejores entrenadores de Kinderbots del universo! ¡Han aprendido que los datos son como el alimento del cerebro de un robot! ¡Hasta la próxima aventura de aprendizaje!"</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+</main>
+</div>
+<script src="script.js"></script>
 </body>
-
 </html>
